<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">
    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/app_icon" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.SignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtName"
                style="@style/EditText.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords">

            </EditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.SignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtSurName"
                style="@style/EditText.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surName"
                android:inputType="textCapWords"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/dropdown_bg"
            />
        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.SignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <AutoCompleteTextView
                android:id="@+id/spinnerCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingRight="20dp"
                android:background="@drawable/dropdown_bg"
                android:hint="@string/domicile"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtCalendar"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dropdown_bg"
            android:clickable="true"
            android:drawableRight="@drawable/ic_calendar"
            android:gravity="left|center_vertical"
            android:paddingRight="20dp"
            android:hint="@string/dob"
            android:textColorHint="@color/colorGray"
            android:textColor="@color/colorWhite">

        </TextView>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.SignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.SignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout.SignInSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_bluebutton_rounded_coners"
            android:text="@string/create_account"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/have_account"
                android:textColor="@color/colorGray" />
            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:text="@string/singIn"
                android:textColor="@color/signup_signin_color" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>