<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/mainLinearLayoutMarginLeftAndRight"
            android:layout_marginRight="@dimen/mainLinearLayoutMarginLeftAndRight"
            android:background="@dimen/nullBackground"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="@dimen/iRealityLogoDimensions"
                android:layout_height="@dimen/iRealityLogoDimensions"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/smallMargin"
                android:background="@drawable/app_icon" />


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_name"
                    style="@style/EditText.SignInSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userNameHint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayout.SignInSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    style="@style/EditText.SignInSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordHint"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="@dimen/signInButtonMarginTop"
                android:background="@drawable/bg_bluebutton_rounded_coners"
                android:text="@string/signInHint"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/bigMargin"
                android:clickable="true"
                android:text="@string/forgotPassword"
                android:textColor="@color/forgot_password_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigMargin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:text="@string/dontHaveAnAccountHint"
                    android:textColor="@color/colorGray" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:text="@string/signUpHint"
                    android:textColor="@color/signup_signin_color" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtSkipLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/smallMargin"
                android:clickable="true"
                android:drawableLeft="@drawable/skip"
                android:gravity="center_vertical"
                android:text="@string/skipToLoginHint"
                android:textColor="@color/colorRed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bigMargin"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:background="@drawable/fb_icon" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:background="@drawable/twitter_icon" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smallMargin"
                    android:background="@drawable/mail_icon" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>